# modern-cmake-by-example

./: CMakeLists.txt  Config.h.in  README.md  main.cpp  readme.md  run_app.sh
answer/: CMakeLists.txt
curl_wrapper/: CMakeLists.txt  curl_wrapper.cpp
doc/: readme.md
install_dir/lib/: libcurl_wrapper.dylib
vscode/: launch.json  tasks.json
wolfram/: CMakeLists.txt
